**Really** fixed the skills list alignment this time!
Also tweaked the Steps listing margins

--- a/_src/sass/components/_listing.scss
+++ b/_src/sass/components/_listing.scss
@@ -276,10 +276,15 @@
         background: $background-color-content;
     }
 
-    /* Hide arrow for last step. */
-    .step-support:after,
-    .step-support .step-footer:after {
-        display: none;
+    /* Hide arrow for last step, and don't leave space for it. */
+    .step-support {
+        margin-bottom: 0;
+
+        &:after,
+        .step-footer:after {
+            display: none;
+        }
+
     }
 
 } //.page-my-approach
