--- a/_src/sass/layouts/_expertise.scss
+++ b/_src/sass/layouts/_expertise.scss
@@ -12,8 +12,6 @@
 
 /* The skills list heading and subheadings. */
 .skills {
-    @include rem("padding-top",    $line);
-    @include rem("padding-bottom", $line);
     background: $background-color;
 
     h2,
@@ -24,19 +22,22 @@
 
 }
 
-/* The icons containers. */
+/*
+ * The icons containers.
+ * 1. Override default list padding.
+ */
 .skill-list {
     @include clearfix;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding: 0; /* 1 */
     list-style: none;
+    text-align: center;
 
     li {
-        float: left;
-        display: block;
+        display: inline-block;
         margin: 0;
-        text-align: center;
     }
 
     /*
